--- a/js/dom.html
+++ b/js/dom.html
@@ -7,8 +7,23 @@
     <title>Dom操作の基本</title>
 </head>
 <body>
-  <script>
-      'use strict';
-  </script>
+　<button id="textChange">テキスト変更</button>
+  <h1>楽しいJavaScript</h1> 
+  <p id="target">こんにちは。こんにちは。こんにちは。</p>>
+  <p>こんにちは。こんにちは。こんにちは。</p>>
+  <p>こんにちは。こんにちは。こんにちは。</p>>
+  　<script>
+        'use strict';
+        // const textChange = () => {
+        //     document.querySelector("h1").textContent = "Changed!!";
+        //     document.getElementById("target").textContent = "Changed!!";
+
+        // }
+        // setTimeout(textChange,1000);
+
+        document.getElementById('textChange').addEventListener("click",() => {
+            document.getElementById("target").textContent = "Changed!!"
+        })
+  　</script>
 </body>
 </html>
